# fprime-arduino

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fprime-arduino.cmake  requirements.txt  settings.ini
ATmega/ATmegaOs/: CMakeLists.txt
ATmega/ATmegaOs/AVR/: IntervalTimer.cpp  XMem.hpp
ATmega/ATmegaOs/Arduino/: IntervalTimer.cpp  StreamLog.cpp  StreamLog.hpp
ATmega/ATmegaTypes/: cstdarg
ATmega/ATmegaTypes/AVR/: StandardTypes.hpp
ATmega/ATmegaTypes/Arduino/: StandardTypes.hpp
ATmega/Drv/: CMakeLists.txt
ATmega/Drv/ATmegaAdcDriver/: ATmegaAdcDriverComponentAi.xml  ATmegaAdcDriverComponentImpl.cpp  ATmegaAdcDriverComponentImpl.hpp  CMakeLists.txt  README.md
ATmega/Drv/ATmegaGpioDriver/: ATmegaGpioDriverComponentAi.xml  ATmegaGpioDriverComponentImpl.cpp  ATmegaGpioDriverComponentImpl.hpp  ATmegaGpioDriverComponentImplAVR.cpp  ATmegaGpioDriverComponentImplCommon.cpp  ATmegaGpioDriverComponentImplLinux.cpp  ATmegaGpioDriverComponentImplStub.cpp  CMakeLists.txt
ATmega/Drv/ATmegaI2cDriver/: ATmegaI2cDriverComponentAi.xml  ATmegaI2cDriverComponentImpl.cpp  ATmegaI2cDriverComponentImpl.hpp  ATmegaI2cDriverComponentImplAVR.cpp  ATmegaI2cDriverComponentImplLinux.cpp  CMakeLists.txt  README.md
ATmega/Drv/ATmegaInternalAdcDriver/: .cookiecutterrc  .gitignore  ATmegaInternalAdcDriverComponentAi.xml  ATmegaInternalAdcDriverComponentImpl.cpp  ATmegaInternalAdcDriverComponentImpl.hpp  CMakeLists.txt  README.md
ATmega/Drv/ATmegaSerialDriver/: ATmegaSerialDriverComponentAVRImpl.cpp  ATmegaSerialDriverComponentAi.xml  ATmegaSerialDriverComponentArduinoImpl.cpp  ATmegaSerialDriverComponentImpl.cpp  ATmegaSerialDriverComponentImpl.hpp  ATmegaSerialDriverComponentLinuxImpl.cpp  CMakeLists.txt  README.md
ATmega/Drv/ATmegaSpiDriver/: ATmegaSpiDriverComponentAi.xml  ATmegaSpiDriverComponentImpl.cpp  ATmegaSpiDriverComponentImpl.hpp  ATmegaSpiDriverComponentImplAVR.cpp  ATmegaSpiDriverComponentImplCommon.cpp  ATmegaSpiDriverComponentImplLinux.cpp  CMakeLists.txt
ATmega/Drv/AdcDriverPorts/: AdcReadPortAi.xml  CMakeLists.txt
ATmega/Drv/HardwareRateDriver/: CMakeLists.txt  HardwareRateDriver.cpp  HardwareRateDriver.hpp  HardwareRateDriverArduino.cpp  HardwareRateDriverTeensy.cpp
ATmega/Drv/U16Array/: CMakeLists.txt  U16ArrayPortAi.xml
ATmega/Svc/ATmegaTime/: .cookiecutterrc  ATmegaTimeComponent.cpp  ArduinoTimeImpl.cpp  CMakeLists.txt  DarwinTimeImpl.cpp  LinuxTimeImpl.cpp  README.md
ATmega/Svc/AssertReset/: .cookiecutterrc  AssertResetComponent.cpp  AssertResetComponent.hpp  AssertResetComponentAVR.cpp  AssertResetComponentAi.xml  AssertResetComponentArduino.cpp  AssertResetComponentLinux.cpp  CMakeLists.txt  README.md
ATmega/Svc/EePrmDb/: CMakeLists.txt  EePrmDbComponentAVRImpl.cpp  EePrmDbComponentAi.xml  EePrmDbComponentImpl.cpp  EePrmDbComponentImpl.hpp  EePrmDbComponentLinuxImpl.cpp  README.md  paramTest.h
Arduino/ArduinoTime/: ArduinoTime.cpp  ArduinoTime.fpp  ArduinoTime.hpp  ArduinoTimeImpl.cpp  ArduinoTimeImpl.hpp  CMakeLists.txt  LinuxTimeImpl.cpp
Arduino/Drv/AnalogDriver/: AnalogDriver.cpp  AnalogDriver.fpp  AnalogDriver.hpp  CMakeLists.txt
Arduino/Drv/GpioDriver/: CMakeLists.txt  GpioDriver.cpp  GpioDriver.fpp  GpioDriver.hpp  GpioDriverArduino.cpp  GpioDriverLinux.cpp
Arduino/Drv/HardwareRateDriver/: CMakeLists.txt  HardwareRateDriver.cpp  HardwareRateDriver.fpp  HardwareRateDriver.hpp  HardwareRateDriverArm.cpp  HardwareRateDriverAvr.cpp  HardwareRateDriverBasic.cpp  HardwareRateDriverFeatherM0.cpp  HardwareRateDriverLinux.cpp  HardwareRateDriverMbed.cpp  HardwareRateDriverTeensy.cpp
Arduino/Drv/I2cDriver/: CMakeLists.txt  I2cDriver.cpp  I2cDriver.fpp  I2cDriver.hpp  I2cDriverArduino.cpp  I2cDriverLinux.cpp
Arduino/Os/: CMakeLists.txt  ConditionVariable.cpp  ConditionVariable.hpp  Console.cpp  Console.hpp  DefaultConsole.cpp  DefaultFile.cpp  DefaultMutex.cpp  DefaultRawTime.cpp  DefaultTask.cpp  Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  IntervalTimer.cpp  Mutex.cpp  Mutex.hpp  RawTime.cpp  RawTime.hpp  StreamLog.cpp  StreamLog.hpp  Task.cpp  Task.hpp  error.cpp  error.hpp
Arduino/Types/: GenericLogAssert.cpp  GenericLogAssert.hpp
Arduino/config/: CMakeLists.txt  FprimeArduino.hpp
ArduinoBlink/: CMakeLists.txt  settings.ini
ArduinoBlink/LedBlinker/: CMakeLists.txt  LedBlinker.cpp  LedBlinker.hpp  LedBlinkerArduino.cpp  LedBlinkerComponentAi.xml  LedBlinkerLinux.cpp
ArduinoBlink/Top/: ArduinoSchedContexts.hpp  ArduinoTopologyAppAi.xml  CMakeLists.txt  Components.hpp  Main.cpp  Topology.cpp  arduino.cpp  write.c
cmake/platform/: ArduinoFw.cmake  FprimeArduino.hpp  Teensyduino.cmake
cmake/toolchain/: ATmega128.cmake  Teensyduino.cmake  arduinodue.cmake  circuitplaybluefruit.cmake  circuitplayexpress.cmake  esp32.cmake  featherESP32.cmake  featherM0.cmake  featherM4.cmake  featherNRF52840.cmake  featherRP2350.cmake  featherSTM32F405.cmake  featherrp2040.cmake  featherrp2040rfm.cmake  grandcentral.cmake  kb2040.cmake  mbed_rp2040.cmake  nucleo_F401RE.cmake  nucleo_H723ZG.cmake  rpipico.cmake  rpipico2.cmake  rpipicow.cmake  stm32f411ce.cmake  teensy32.cmake  teensy40.cmake  teensy41.cmake  thingplusrp2040.cmake
config/: AcConstants.ini  ActiveLoggerImplCfg.hpp  CommandDispatcherImplCfg.hpp  FpConfig.hpp  TlmChanImplCfg.hpp
docs/: arduino-cli-install.md  board-list.md
docs/rules/: 99-adafruit-boards.rules
docs/uploading/: arduinoDUE.md  cortexM0.md  cortexM4.md  esp32.md  featherESP32.md  featherSTM32F405.md  nRF52840.md  rp2040_2350.md  stm32.md  teensy.md
fprime-arduino/ArduinoOs/: CMakeLists.txt  IntervalTimer.cpp  StreamLog.cpp  StreamLog.hpp
fprime-arduino/ArduinoTime/: ArduinoTimeImpl.cpp  CMakeLists.txt  DarwinTimeImpl.cpp  mod.mk
fprime-arduino/ArduinoTypes/: StandardTypes.hpp
(+117 files in other folders)
